--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spannende Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            margin-top: 0;
+        }
+        section {
+            padding: 20px;
+        }
+        .feature {
+            background-color: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+    </style>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+    <header>
+        <h1>Willkommen auf unserer spannenden Website!</h1>
+        <p>Erlebe eine Welt voller Wunder und Entdeckungen.</p>
+    </header>
+    <section>
+        <div class="feature">
+            <h2>Spannendes Feature 1</h2>
+            <p>Entdecke die Geheimnisse des Universums.</p>
+        </div>
+        <div class="feature">
+            <h2>Spannendes Feature 2</h2>
+            <p>Reise durch die Zeit und erlebe historische Ereignisse.</p>
+        </div>
+        <div class="feature">
+            <h2>Spannendes Feature 3</h2>
+            <p>Tauche ein in fantastische Welten und erlebe Abenteuer.</p>
+        </div>
+    </section>
+    <footer>
+        <p>&copy; 2024 Spannende Website. Alle Rechte vorbehalten.</p>
+    </footer>
 </body>
-
 </html>
