--- a/src/index.html
+++ b/src/index.html
@@ -4,46 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spannender Shop</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            margin-top: 0;
-        }
-        nav {
-            background-color: #555;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 5px 15px;
-        }
-        nav a:hover {
-            background-color: #777;
-        }
-        section {
-            padding: 20px;
-        }
-        .product {
-            background-color: #fff;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -51,43 +11,10 @@
         <p>Entdecke aufregende Produkte!</p>
     </header>
     <nav>
-        <a href="#elektronik">Elektronik</a>
-        <a href="#kleidung">Kleidung</a>
-        <a href="#bücher">Bücher</a>
+        <a href="elektronik.html">Elektronik</a>
+        <a href="kleidung.html">Kleidung</a>
+        <a href="buecher.html">Bücher</a>
     </nav>
-    <section id="elektronik">
-        <h2>Elektronik</h2>
-        <div class="product">
-            <h3>Smartphones</h3>
-            <p>Entdecke die neuesten Smartphones.</p>
-        </div>
-        <div class="product">
-            <h3>Laptops</h3>
-            <p>Finde leistungsstarke Laptops für deine Bedürfnisse.</p>
-        </div>
-    </section>
-    <section id="kleidung">
-        <h2>Kleidung</h2>
-        <div class="product">
-            <h3>T-Shirts</h3>
-            <p>Stöbere durch unsere Auswahl an coolen T-Shirts.</p>
-        </div>
-        <div class="product">
-            <h3>Hosen</h3>
-            <p>Entdecke trendige Hosen für jeden Anlass.</p>
-        </div>
-    </section>
-    <section id="bücher">
-        <h2>Bücher</h2>
-        <div class="product">
-            <h3>Romane</h3>
-            <p>Finde fesselnde Romane für gemütliche Abende.</p>
-        </div>
-        <div class="product">
-            <h3>Sachbücher</h3>
-            <p>Erweitere deinen Horizont mit unseren informativen Sachbüchern.</p>
-        </div>
-    </section>
     <footer>
         <p>&copy; 2024 Spannender Shop. Alle Rechte vorbehalten.</p>
     </footer>
