--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spannender Shop</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Online-Shop</title>
+    <style>
+        /* Stil für das Verzeichnis */
+        #verzeichnis {
+            width: 200px;
+            float: left;
+            background-color: #f2f2f2;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        /* Stil für die Hauptinhaltsbereich */
+        #inhalt {
+            margin-left: 220px; /* Berücksichtigen Sie die Breite des Verzeichnisses */
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Willkommen im Spannenden Shop</h1>
-        <p>Entdecke aufregende Produkte!</p>
-    </header>
-    <nav>
-        <a href="elektronik.html">Elektronik</a>
-        <a href="kleidung.html">Kleidung</a>
-        <a href="buecher.html">Bücher</a>
-    </nav>
-    <footer>
-        <p>&copy; 2024 Spannender Shop. Alle Rechte vorbehalten.</p>
-    </footer>
+
+<div id="verzeichnis">
+    <h2>Kategorien</h2>
+    <ul>
+        <li><a href="#schmuck">Schmuck</a></li>
+        <li><a href="#kunstwerke">Kunstwerke</a></li>
+        <li><a href="#handwerk">Handwerkliche Produkte</a></li>
+    </ul>
+</div>
+
+<div id="inhalt">
+    <h1>Willkommen in unserem Online-Shop!</h1>
+    <div id="schmuck">
+        <h2>Schmuck</h2>
+        <!-- Hier können die Schmuckprodukte angezeigt werden -->
+    </div>
+    <div id="kunstwerke">
+        <h2>Kunstwerke</h2>
+        <!-- Hier können die Kunstwerke angezeigt werden -->
+    </div>
+    <div id="handwerk">
+        <h2>Handwerkliche Produkte</h2>
+        <!-- Hier können die handwerklichen Produkte angezeigt werden -->
+    </div>
+</div>
+
 </body>
 </html>
-<script src="script.js"></script>
