--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,14 @@
       padding: 10px 20px;
       font-size: 18px;
       cursor: pointer;
+      background-color: red; /* Hintergrundfarbe rot setzen */
+      color: white; /* Textfarbe weiß setzen */
+      border: none; /* Rand entfernen */
+      border-radius: 5px; /* Randradius setzen */
+      transition: background-color 0.3s; /* Übergangseffekt für Hintergrundfarbe */
+    }
+    button:hover {
+      background-color: darkred; /* Hintergrundfarbe ändern, wenn Maus darüber bewegt wird */
     }
   </style>
 </head>
