--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,4 @@
   </style>
 </head>
 <body>
-  <button onclick="window.location.href='https://th.bing.com/th/id/OIP.OfnHVIAm6V3xqAHV6VGiCAHaFj?w=217&h=180&c=7&r=0&o=5&pid=1.7'">Weiter</button>
-</body>
-</html>
+  <button onclick="window.location.href='https://www.bing.com/images/search?view=detailV2&ccid=Y8eOC%2fJY&id=6B1416D05669F8998618C35525699CA4FBA368A8&thid=OIP.Y8eOC_JYPbpSEq-PPQA-YQHaFt&mediaurl=https%3a%2f%2fi.pinimg.com%2f736x%2f3d%2ff2%2f6f%2f3df26f8f76b4525bcc69eb30b0881124.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.63c78e0bf2583dba521
