--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
   </style>
 </head>
 <body>
-  <button onclick="window.location.href='https://www.bing.com/images/search?view=detailV2&ccid=Y8eOC%2fJY&id=6B1416D05669F8998618C35525699CA4FBA368A8&thid=OIP.Y8eOC_JYPbpSEq-PPQA-YQHaFt&mediaurl=https%3a%2f%2fi.pinimg.com%2f736x%2f3d%2ff2%2f6f%2f3df26f8f76b4525bcc69eb30b0881124.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.63c78e0bf2583dba5212af8f3d003e61%3frik%3dqGij%252b6ScaSVVww%26pid%3dImgRaw%26r%3d0&exph=555&expw=720&q=du+wurdest+gepatrickt&simid=608054841718874967&FORM=IRPRST&ck=83EACBF9D5158EE80932E49F50947480&selectedIndex=6&itb=0'">Weiter</button>
+  <button onclick="window.location.href='https://th.bing.com/th/id/OIP.d3V8zrdxyA8eID1cam28KgHaDv?w=348&h=177&c=7&r=0&o=5&pid=1.7'">Weiter</button>
   <img class="bird" src="https://www.pngitem.com/pimgs/m/146-1469115_birds-png-images-download-transparent-bird-hd-png.png" alt="Vogel">
 </body>
 </html>
