--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anmeldung</title>
+    <title>Login</title>
 </head>
 <body>
-    <h2>Anmeldung</h2>
-    <form action="https://example.com/signup" method="post">
-        <label for="username">Benutzername:</label><br>
-        <input type="text" id="username" name="username" required><br>
-        <label for="email">E-Mail:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <label for="password">Passwort:</label><br>
-        <input type="password" id="password" name="password" required><br>
-        <input type="submit" value="Anmelden">
+    <h1>Login</h1>
+    <form id="loginForm">
+        <input type="text" id="username" placeholder="Username" required>
+        <input type="password" id="password" placeholder="Password" required>
+        <button type="submit">Login</button>
     </form>
+    <h1>Register</h1>
+    <form id="registerForm">
+        <input type="text" id="newUsername" placeholder="Username" required>
+        <input type="password" id="newPassword" placeholder="Password" required>
+        <button type="submit">Register</button>
+    </form>
+    <script src="app.js"></script>
 </body>
 </html>
