--- a/src/index.html
+++ b/src/index.html
@@ -12,24 +12,7 @@
             background-color: #f0f0f0;
         }
         header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-            padding: 10px 0;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        section {
+            backgro
             padding: 20px;
             margin: 10px;
             background-color: #fff;
