--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen auf meiner Webseite</h1>
+        <h1>Willkome</h1>
     </header>
     <nav>
         <a href="#rickroll">Rickroll</a>
